# fadaka

./: .btfs  .env  .env.development  .ruby  @0x0000000000000000000000000000000000000000  App.vue  BCReadingExtras.h  CMAKE  CMakeList  CMakelists  CNAME.yml  Chart.yaml  Cu_usage.js  Docker-compose.yml  Dockerfile  Fadakawallet.json  FusionBridge.sol  HDwallet.html  Home.vue  Lbtoken.sol  Lola.sol  Node.js  Offchain-proof.py  Package.json  Point.html  ProgramData\Docker\config\daemon.json  README.md  Renovate.json  Safemath.sol  Sign_transactions.py  THIRDWEB  Test.rst  Value.sol  Viewers.py  bash  bash.sh  basic.ll  build.sh  check-docker-daemon.ps1  circom.js  (+48 more)
.btfs/: go-btfs.yml
.github/: FUNDING.yml
0x0000000000000000000000000000000000000000/: fadakatoken.sol
@fadaka/: Contract.sol  config.js  contractadress.sh  depositContract.v.py  hardhat.config.js
App/: api.py  blockchain.py  main.js  settings.py  streamline_app.py  wagmi.config.ts
Blockchain/: Blockchain_transaction.py  Deploy_proxy.js  README.md  cryptopp.cpp  hardhat.config.js  uniswap_v2_router.abi.json  uniswap_v3_router.abi.json  universal_router.abi.json
Chart/: chart.yaml  node-statefulset.yaml  values.yaml
Cmake/: BuildInfo.cmake  CodeCoverage.cmake  Compiler.cmake  Docs.cmake  GitVersion.cmake  Packaging.cmake  PrecompiledHeaders.cmake  Sanitizers.cmake  StaticAnalysis.cmake  Utils.cmake  Warnings.cmake
Docker/: bash.sh
Docs/: Documents.md  Etherscan.md  (+4 more)
blockchain/: README.md  autogen.sh  configure.ac  fadaka_secp.m4  package.json
blockchain/src/: makefile.am  secp.c  secp.h
(+184 files in other folders)
